# GlazingControlApp

./: .dockerignore  .gitignore  CONTRIBUTING  CONTRIBUTING.md  DEV-SETUP.md  Dockerfile  LICENSE  OVERVIEW.md  README.md  docker-compose.yml  package-lock.json  package.json
svc/: .dockerignore  .env.example  Dockerfile  README.md  main.py  package.json  pyproject.toml  requirements.txt
svc/app/: adapter.py  config.py  db_backup.py  group_layout.py  models.py  routes.py  service.py  simulator.py  state.py
svc/app/routines/: manager.py
svc/app/sensors/: eko_cbox_modbus_client.py  eko_cbox_modbus_tcp_client.py  eko_ms90_plus_sim_client.py  interface.py  jeti_specfirm_client.py  jeti_spectraval_sim.py  jeti_spectraval_watcher.py  manager.py  (+4 more)
svc/data/: 251118_Jeti_Spectraval_Data.cap  Lockout_Event  Moreinfo.txt  audit.db  audit.db-journal  audit.json  exampleGroupsResp.json  exampleWindowResp.json  group_mapping.json  jeti_sim_output  panels_config.json  panels_state.json  rawResponses.txt  sensors_config.json  window_mapping.json
svc/scripts/: read_t10a_serial.py
svc/tests/: conftest.py  test_basic.py  test_db_backup.py  test_eko_cbox_modbus_client.py  test_eko_cbox_modbus_tcp_client.py  test_eko_ms90_plus_sim_client.py  test_frontend_serving.py  test_groups_api.py  test_jeti_specfirm_client.py  test_jeti_spectraval_watcher.py  test_real_mode.py  test_sensor_labels.py  test_sensor_manager.py  test_sensor_spectrum.py  test_serial_autodetect.py  test_spectral_metrics.py  test_sqlite.py  test_t10a_client.py  test_t10a_serial.py  test_t10a_sim_client.py
(+72 files in other folders)
